# clash-royale-api

./: .env.example  .gitignore  .golangci.yml  .goreleaser.yml  AGENTS.md  CONTRIBUTING.md  CSV_EXPORTS.md  CSV_EXPORT_USAGE.md  DECK_BUILDER.md  DECK_STRATEGIES.md  DOLT_REMOTE.md  EVENT_TRACKING.md  EVOLUTION.md  GEMINI.md  LICENSE  README.md  Taskfile.old.yml  Taskfile.yml  analyze_playstyle.py  beadery.sh  build_custom_decks.py  djhg9sbiclcebc5rhtt1kdsadivg7qri.darc  generate_mulligan_guide.py  go.mod  go.sum  integration_evolution_test.go  integration_test.go  manifest  nug0griqacnosfcogfv0q6cjorf9upeg  pyproject.toml
.beads/: .beads-credential-key  .gitignore  deletions.jsonl.migrated  dolt-backup.json  interactions.jsonl  issues.jsonl  last-touched  metadata.json  push-state.json  sync_base.jsonl
.beads/backup/: backup_state.json  comments.jsonl  config.jsonl  dependencies.jsonl  events.jsonl  issues.jsonl
.claude/: hookify.enforce-session-close-protocol.local.md  hookify.require-active-beads-task.local.md  hookify.require-bd-sync-before-commit.local.md  hookify.require-tests-or-beads-task.local.md  settings.json
.cursor/rules/: beads.mdc  core.mdc  go.mdc  testing.mdc
.github/workflows/: ci.yml  release.yml
cmd/cr-api/: analysis_helpers.go  analysis_helpers_test.go  api_helpers.go  api_helpers_test.go  api_token.go  archetype_commands.go  archetype_commands_test.go  artifact_save_helpers.go  artifact_save_helpers_test.go  batch_commands.go  boosted_levels.go  boosted_levels_test.go  cli_integration_test.go  (+80 more)
config/: .env.example  README.md  archetypes.json  card_level_curves.json  strategies.json
data/: README.md  evolution_shards.example.json  synergy_pairs.json  upgrade_plan_example.json
docs/: ALGORITHM_COMPARISON.md  ARCHETYPE_GUIDE.md  CLI_REFERENCE.md  CODE_QUALITY_BASELINE.md  CODE_QUALITY_ROADMAP.md  COUNTER_RELATIONSHIPS.md  DECK_ANALYSIS_SUITE.md  DECK_BUILDER.md  DECK_CLI_CONTRACT.md  DECK_DISCOVERY.md  DECK_FUZZING.md  DECK_STRATEGIES.md  DECK_SYNERGIES.md  EVENT_TRACKING.md  FUZZ_STORAGE_REEVALUATION_PLAN.md  GENETIC_FUZZING.md  IMPROVED_SCORING_DESIGN.md  INTEGRATION_DESIGN.md  LEVEL_CURVES_IMPLEMENTATION.md  PLAYER_CONTEXT.md  REDUNDANCY_PATTERNS.md  RELEASE_PROCESS.md  SYNERGY_GUIDE.md  TESTING.md  VERSATILITY_METRICS.md
examples/: deck_building_example.go  event_analysis_example.go
go/: .golangci.yml  coverage.out  go.mod  go.sum  integration_test.go
reports/: baseline.json
research/: level_curve_analysis.md
scripts/: check-stale-beads-refs.sh  install-task.sh  project_deck_projection.py  quick_validate_skill.py  run_all_tasks.sh  setup-githooks.sh  watch_dev.py
task_execution_logs/: debug_list.txt
tests/: __init__.py  conftest.py  test_csv_export.py
(+346 files in other folders)
