[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clash-royale-api"
version = "0.1.0"
description = "Comprehensive tool for collecting and analyzing Clash Royale card data, player statistics, and wild cards"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
keywords = ["clash-royale", "api", "gaming", "data-analysis", "supercell"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Official Clash Royale API wrapper
    "clashroyale>=3.0.0",

    # Async support (included with clashroyale but ensuring latest)
    "aiohttp>=3.9.0",

    # Environment management
    "python-dotenv>=1.0.0",

    # Data handling
    "pandas>=2.1.0",
    "numpy>=1.24.0",

    # Configuration
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "watchdog>=3.0.0",
]

analysis = [
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "plotly>=5.0.0",
    "jupyter>=1.0.0",
]

export = [
    "openpyxl>=3.0.0",
    "xlsxwriter>=3.0.0",
]

all = [
    "clash-royale-api[dev,analysis,export]",
]

[project.urls]
Homepage = "https://github.com/yourusername/clash-royale-api"
Documentation = "https://github.com/yourusername/clash-royale-api#readme"
Repository = "https://github.com/yourusername/clash-royale-api.git"
"Bug Tracker" = "https://github.com/yourusername/clash-royale-api/issues"

[project.scripts]
cr-api = "clash_royale_api.cli:cli_entry"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "C90", "UP"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["src/clash_royale_api"]